# genaigrader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: django-tests.yml
Docker/: docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
genaigrader/: admin.py  apps.py  llm_api.py  models.py
genaigrader/migrations/: 0001_initial.py  0002_course_username.py  0003_rename_username_course_user.py  0004_evaluation_time.py  0005_model_api_key_model_api_url.py  0006_rename_creator_username_exam_user.py  0007_model_user.py  0008_alter_evaluation_ev_date.py  0009_evaluation_ollama_version.py  0010_evaluation_notes.py  0011_alter_questionevaluation_question_option_nullable.py  0011_evaluation_hardware_info.py
genaigrader/services/: confidence_service.py  course_service.py  exam_service.py  file_service.py  get_models_service.py  graphics_service.py  hardware_annotation_service.py  llm_service.py  model_service.py  ollama_version_service.py  question_analytics_service.py  stream_service.py  upload_file_service.py
genaigrader/templates/: batch_evaluations.html  evaluate.html  exam_detail.html
genaigrader/tests/: test_batch_evaluations.py  test_hardware_annotation.py  test_notes_functionality.py  test_question_analytics_service.py  test_tooltip_count.py  tests.py  tests_analysis_view.py  tests_api_view.py  tests_exam_files.py  tests_stream_service.py
genaigrader/views/: analysis_view.py  (+6 more)
mi_web/: asgi.py  settings.py  settings_ngrok.py  urls.py  wsgi.py
(+11 files in other folders)
