[project]
name = "genaigrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-database-url>=2.2.0",
    "django>=5.2.1",
    "gunicorn>=23.0.0",
    "ollama>=0.4.8",
    "openai>=1.78.1",
    "packaging>=25.0",
    "psycopg2-binary",
    "requests>=2.32.3",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"mi_web/settings_ngrok.py" = ["F403", "F405"]

